=fixed miss-aligned section heading

--- a/src/components/Home/GraphicsPortfolio/GraphicsPortfolio.css
+++ b/src/components/Home/GraphicsPortfolio/GraphicsPortfolio.css
@@ -135,7 +135,7 @@
 }
 
 .Graphics .graphicscontainer {
-    width: 85%;
+    width: 80%;
     margin: auto;
 }
 
